packages/isar_community_generator/test/errors/class/private.dart
// must be public

import 'package:isar-community/isar.dart';

@collection
// ignore: unused_element
class _Model {
  Id? id;
}
